my-board 프로젝트 디펜던시 정리
- 쓰지 않는 것이나 충돌 있는 부분 정리
- 그런데 신기하게도 정리 이후 아래 이슈의 문제가 사라졌다.
  - https://github.com/fp024/learning-spring-web-project-by-code/issues/12
  - org.jetbrains:annotations 를 디펜던시 해주지 않아도 Querydsl 관련 어노테이션 경고가 노출되지 않았다.