@@ -23,21 +23,19 @@
     <hibernate.version>6.1.5.Final</hibernate.version>
     <spring-data-jpa.version>3.0.0</spring-data-jpa.version>
     <querydsl.version>5.0.0</querydsl.version>
-
-    
-    <apache-jstl.version>11.0.0</apache-jstl.version>
-
     <jakarta.inject-api.version>2.0.1</jakarta.inject-api.version>
     <jakarta.servlet-api.version>6.0.0</jakarta.servlet-api.version>
+
     <jakarta.servlet.jsp.jstl-api.version>2.0.0</jakarta.servlet.jsp.jstl-api.version>
+    <jakarta.servlet.jsp.jstl.version>2.0.0</jakarta.servlet.jsp.jstl.version>
 
     <java-time-jsptags.version>2.0.0</java-time-jsptags.version>
 
     <assertj.version>3.23.1</assertj.version>
-    
+
     <!-- Jetty 12 버전이 나오면 바꿀 것. -->
     <jetty.version>11.0.12</jetty.version>
-    
+
     <!-- Tomcat 10.1.x는 Servlet 6.0을 정식 지원함. -->
     <cargo-tomcat.containerId>tomcat10x</cargo-tomcat.containerId>
     <cargo-tomcat.version>10.1.1</cargo-tomcat.version>
@@ -86,6 +84,204 @@
         </resources>
       </build>
     </profile>
+
+    <!-- 기본 웹 애플리케이션 실행 : jetty 또는 tomcat -->
+    <!-- 부모 pom.xml 에도 있는 설정이지만, 설정을 조금씩 바꿔야할지몰라서 일단은 하위에도 내려놓자~ -->
+    <profile>
+      <id>default-webapp-run</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <!-- Jetty 서버 구동 -->
+          <!-- 도움말 자세히보기: mvnw jetty:help -Ddetail=true -Dgoal=run -->
+          <plugin>
+            <!-- https://www.eclipse.org/jetty/documentation/jetty-10/programming-guide/index.html#jetty-maven-plugin -->
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <version>${jetty.version}</version>
+            <configuration>
+              <httpConnector>
+                <!--host>localhost</host-->
+                <port>${jetty.port}</port>
+              </httpConnector>
+              <webApp>
+                <contextPath>${jetty-context-path}</contextPath>
+                <descriptor>${web-xml-location}</descriptor>
+                <sessionHandler>
+                  <sessionIdPathParameterName>none</sessionIdPathParameterName>
+                </sessionHandler>
+              </webApp>
+              <deployMode>EMBED</deployMode>
+              <stopKey>CTRL+C</stopKey>
+              <stopPort>8999</stopPort>
+              <!-- 9.x 설정: <scanIntervalSeconds> 대신 <scan> 사용 -->
+              <!--
+                변경 감지 자동 재시작시 ContextLoaderListener가 제대로 실행되지 않는 오류가 발생한다.
+                설정을 -1로하여 자동 재시작이 일어나지 않도록 한다.
+               -->
+              <scan>${jetty-auto-deploy-seconds}</scan>
+              <scanTargetPatterns>
+                <scanTargetPattern>
+                  <directory>src/main/webapp/WEB-INF</directory>
+                  <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                  </includes>
+                  <excludes>
+                    <exclude>**/*.jsp</exclude>
+                  </excludes>
+                </scanTargetPattern>
+              </scanTargetPatterns>
+            </configuration>
+          </plugin>
+
+          <!-- 실제 Tomcat 9 배포 실행 테스트 -->
+          <!-- mvn clean package -DskipTests cargo:run -->
+          <plugin>
+            <groupId>org.codehaus.cargo</groupId>
+            <artifactId>cargo-maven3-plugin</artifactId>
+            <version>${cargo.version}</version>
+            <configuration>
+              <container>
+                <containerId>${cargo-tomcat.containerId}</containerId>
+                <systemProperties>
+                  <file.encoding>UTF-8</file.encoding>
+                </systemProperties>
+                <zipUrlInstaller>
+                  <url>
+                    https://repo.maven.apache.org/maven2/org/apache/tomcat/tomcat/${cargo-tomcat.version}/tomcat-${cargo-tomcat.version}.zip
+                  </url>
+                  <downloadDir>${project.build.directory}/downloads</downloadDir>
+                  <extractDir>${project.build.directory}/extracts</extractDir>
+                </zipUrlInstaller>
+              </container>
+              <configuration>
+                <type>standalone</type>
+                <properties>
+                  <cargo.servlet.port>${cargo-server-port}</cargo.servlet.port>
+                </properties>
+              </configuration>
+              <deployables>
+                <deployable>
+                  <groupId>${project.groupId}</groupId>
+                  <artifactId>${project.artifactId}</artifactId>
+                  <type>war</type>
+                  <properties>
+                    <context>${cargo-context-path}</context>
+                  </properties>
+                </deployable>
+              </deployables>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <!-- Scouter를 활성화하여 웹 애플리케이션 실행 : jetty 또는 tomcat -->
+    <profile>
+      <id>webapp-run-with-scouter</id>
+      <build>
+        <plugins>
+          <!-- Jetty 서버 구동 -->
+          <!-- 도움말 자세히보기: mvnw jetty:help -Ddetail=true -Dgoal=run -->
+          <plugin>
+            <!-- https://www.eclipse.org/jetty/documentation/jetty-10/programming-guide/index.html#jetty-maven-plugin -->
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-maven-plugin</artifactId>
+            <version>${jetty.version}</version>
+            <configuration>
+              <httpConnector>
+                <!--host>localhost</host-->
+                <port>${jetty.port}</port>
+              </httpConnector>
+              <!-- jvmArgs는 FORK 모드에서만 동작한다. -->
+              <jvmArgs><!--
+                  -->-javaagent:${scouter.agent.lib} <!--
+                  -->--illegal-access=warn <!--
+                  -->--add-opens=java.base/java.lang=ALL-UNNAMED <!--
+                  -->-Djdk.attach.allowAttachSelf=true <!--
+                  -->-Dscouter.config=${project.basedir}/../../${scouter.config.file} <!--
+              --></jvmArgs>
+              <webApp>
+                <contextPath>${jetty-context-path}</contextPath>
+                <descriptor>${web-xml-location}</descriptor>
+                <sessionHandler>
+                  <sessionIdPathParameterName>none</sessionIdPathParameterName>
+                </sessionHandler>
+              </webApp>
+              <deployMode>FORK</deployMode>
+              <stopKey>CTRL+C</stopKey>
+              <stopPort>8999</stopPort>
+              <!-- 9.x 설정: <scanIntervalSeconds> 대신 <scan> 사용 -->
+              <!--
+                변경 감지 자동 재시작시 ContextLoaderListener가 제대로 실행되지 않는 오류가 발생한다.
+                설정을 -1로하여 자동 재시작이 일어나지 않도록 한다.
+               -->
+              <scan>${jetty-auto-deploy-seconds}</scan>
+              <scanTargetPatterns>
+                <scanTargetPattern>
+                  <directory>src/main/webapp/WEB-INF</directory>
+                  <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                  </includes>
+                  <excludes>
+                    <exclude>**/*.jsp</exclude>
+                  </excludes>
+                </scanTargetPattern>
+              </scanTargetPatterns>
+            </configuration>
+          </plugin>
+
+          <!-- 실제 Tomcat 9 배포 실행 테스트 -->
+          <plugin>
+            <groupId>org.codehaus.cargo</groupId>
+            <artifactId>cargo-maven3-plugin</artifactId>
+            <version>${cargo.version}</version>
+            <configuration>
+              <container>
+                <containerId>${cargo-tomcat.containerId}</containerId>
+                <systemProperties>
+                  <file.encoding>UTF-8</file.encoding>
+                  <scouter.config>${project.basedir}/../../${scouter.config.file}</scouter.config>
+                </systemProperties>
+                <zipUrlInstaller>
+                  <url>
+                    https://repo.maven.apache.org/maven2/org/apache/tomcat/tomcat/${cargo-tomcat.version}/tomcat-${cargo-tomcat.version}.zip
+                  </url>
+                  <downloadDir>${project.build.directory}/downloads</downloadDir>
+                  <extractDir>${project.build.directory}/extracts</extractDir>
+                </zipUrlInstaller>
+              </container>
+              <configuration>
+                <type>standalone</type>
+                <properties>
+                  <cargo.jvmargs><!--
+                  -->-javaagent:${scouter.agent.lib} <!--
+                  -->--illegal-access=warn <!--
+                  -->--add-opens=java.base/java.lang=ALL-UNNAMED <!--
+                  -->-Djdk.attach.allowAttachSelf=true <!--
+                  --></cargo.jvmargs>
+                  <cargo.servlet.port>${cargo-server-port}</cargo.servlet.port>
+                </properties>
+              </configuration>
+              <deployables>
+                <deployable>
+                  <groupId>${project.groupId}</groupId>
+                  <artifactId>${project.artifactId}</artifactId>
+                  <type>war</type>
+                  <properties>
+                    <context>${cargo-context-path}</context>
+                  </properties>
+                </deployable>
+              </deployables>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 
   <dependencies>
@@ -107,6 +303,19 @@
       <artifactId>spring-orm</artifactId>
       <version>${org.springframework-version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+      <version>${org.springframework-version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>${org.springframework-version}</version>
+    </dependency>
+
 
     <!-- Spring Security -->
     <dependency>
@@ -133,12 +342,6 @@
       <version>${spring-security.version}</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-test</artifactId>
-      <version>${spring-security.version}</version>
-      <scope>test</scope>
-    </dependency>
 
     <!-- AspectJ -->
     <dependency>
@@ -158,47 +361,12 @@
       <artifactId>log4j-slf4j2-impl</artifactId>
     </dependency>
 
-
-    <!-- @Inject -->
-    <!--
-    <dependency>
-      <groupId>javax.inject</groupId>
-      <artifactId>javax.inject</artifactId>
-      <version>1</version>
-    </dependency>
-    -->
-    <dependency>
-      <groupId>jakarta.inject</groupId>
-      <artifactId>jakarta.inject-api</artifactId>
-      <version>${jakarta.inject-api.version}</version>
-    </dependency>
-
-    <!-- Servlet -->
-    <!--
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>${javax.servlet-api.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    -->
-
     <dependency>
       <groupId>jakarta.servlet</groupId>
       <artifactId>jakarta.servlet-api</artifactId>
       <version>${jakarta.servlet-api.version}</version>
       <scope>provided</scope>
     </dependency>
-
-    <!--
-    <dependency>
-      <groupId>javax.servlet.jsp</groupId>
-      <artifactId>javax.servlet.jsp-api</artifactId>
-      <version>${javax.servlet.jsp-api.version}</version>
-      <scope>provided</scope>
-    </dependency>
-    -->
-
 
     <dependency>
       <groupId>jakarta.servlet.jsp.jstl</groupId>
@@ -207,14 +375,12 @@
       <scope>provided</scope>
     </dependency>
 
-    <!--
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>jstl</artifactId>
-      <version>${jstl.version}</version>
-      <scope>runtime</scope>
+      <groupId>org.glassfish.web</groupId>
+      <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+      <version>${jakarta.servlet.jsp.jstl.version}</version>
+      <scope>provided</scope>
     </dependency>
-    -->
 
     <!-- https://github.com/sargue/java-time-jsptags -->
     <dependency>
@@ -224,13 +390,6 @@
     </dependency>
 
     <!-- Database -->
-    <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc11/ -->
-    <dependency>
-      <groupId>com.oracle.database.jdbc</groupId>
-      <artifactId>ojdbc11</artifactId>
-      <version>${ojdbc11.version}</version>
-    </dependency>
-
     <dependency>
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
@@ -242,6 +401,13 @@
       <groupId>org.hibernate.orm</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>${hibernate.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-jpamodelgen</artifactId>
+      <version>${hibernate.version}</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
@@ -264,38 +430,6 @@
     </dependency>
 
     <dependency>
-      <groupId>org.hibernate.orm</groupId>
-      <artifactId>hibernate-jpamodelgen</artifactId>
-      <version>${hibernate.version}</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <!-- hibernate-jpamodelgen 추가 후 반드시 필요한 모듈 -->
-    <dependency>
-      <groupId>jakarta.xml.bind</groupId>
-      <artifactId>jakarta.xml.bind-api</artifactId>
-      <version>4.0.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-      <version>${javax.annotation-api.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.google.code.findbugs</groupId>
-      <artifactId>jsr305</artifactId>
-      <version>3.0.2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.jetbrains</groupId>
-      <artifactId>annotations</artifactId>
-      <version>23.0.0</version>
-    </dependency>
-
-    <dependency>
       <groupId>com.querydsl</groupId>
       <artifactId>querydsl-apt</artifactId>
       <version>${querydsl.version}</version>
@@ -303,40 +437,21 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- hibernate-jpamodelgen 추가 후 반드시 필요한 모듈 -->
+    <!--
+      hibernate-core로 부터 가져오는
+      com.sun.activation:jakarta.activation:jar:2.0.1 의 중복을 피하기위해
+      이전버전 (3.0.1)을 쓰기로 함.
+    -->
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>3.0.1</version>
+    </dependency>
+
     <dependency>
       <groupId>com.zaxxer</groupId>
       <artifactId>HikariCP</artifactId>
-    </dependency>
-
-<!--    <dependency>
-      <groupId>org.mybatis</groupId>
-      <artifactId>mybatis</artifactId>
-      <version>${mybatis.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.mybatis</groupId>
-      <artifactId>mybatis-spring</artifactId>
-      <version>${mybatis.spring.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.mybatis.dynamic-sql</groupId>
-      <artifactId>mybatis-dynamic-sql</artifactId>
-      <version>${mybatis.dynamic.sql.version}</version>
-    </dependency>-->
-
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-tx</artifactId>
-      <version>${org.springframework-version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-jdbc</artifactId>
-      <version>${org.springframework-version}</version>
     </dependency>
 
     <dependency>
@@ -364,6 +479,13 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <version>${org.springframework-version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <version>${spring-security.version}</version>
       <scope>test</scope>
     </dependency>
 
